change project description; remove dependencies from classpath

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LFS Tofu Server Application</name>
+	<name>LFS.InSim.Server</name>
 	<comment></comment>
 	<projects>
 	</projects>
